feat: add swagger for new endpoint getting history
